fixed: Code wrap on small screens.

--- a/builtin/blog/template/init/main.css
+++ b/builtin/blog/template/init/main.css
@@ -121,10 +121,7 @@ pre {
 .light-background {
     background-color: var(--code-background);
     border: none;
-    white-space: pre;
-}
-*:not(pre) > code {
-    white-space: nowrap;
+    white-space: pre-wrap;
 }
 .dl-horizontal > dd {
     margin-top: 1.0rem;
