--- a/docs/main.css
+++ b/docs/main.css
@@ -104,10 +104,7 @@
   .light-background {
     background-color: #f8f8f8;
     border: none;
-    white-space: pre;
-  }
-  *:not(pre) > code {
-    white-space: nowrap;
+    white-space: pre-wrap;
   }
   .dl-horizontal > dd {
     margin-top: 1.0rem;
